<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:gravity="center"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/tips_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dlg_pd_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#00000000"
            android:gravity="center"
            android:maxLines="1"
            android:textSize="@dimen/dlg_title_text_size"
            android:text="@string/dlg_pd_note_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEEEEEE"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/dlg_text"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <RadioGroup
                    android:id="@+id/rg_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_ok"
                        style="@style/radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/s_ok" />

                    <RadioButton
                        android:id="@+id/rb_wrong"
                        style="@style/radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/s_wrong" />
                    
                    <RadioButton
                        android:id="@+id/rb_extra"
                        style="@style/radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/s_extra" />
                </RadioGroup>

                <EditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="3"
                    android:singleLine="true"
                    android:selectAllOnFocus="true"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <Button
                    android:id="@+id/btn_ok"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/ok"/>

                <Button
                    android:id="@+id/btn_exit"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>