<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    
    <LinearLayout
        android:id="@+id/ll_head_bar"
        style="@style/header_linear_layout"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible" >

        <ImageButton
            android:id="@+id/ib_back"
            style="@style/header_button_left"
            android:layout_marginEnd="10dip"
            android:background="@drawable/back" 
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/tv_title"
            style="@style/header_text_view"
            android:text="@string/act_bh" />

        <ImageButton
            android:id="@+id/ib_options"
            style="@style/header_button_right"
            android:layout_marginLeft="8dip"
            android:background="@drawable/options"
            android:onClick="onOptionsClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_page"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible" >
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_bg_color"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible" >
        
        <TextView
            android:id="@+id/tv_Stat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:id="@+id/ib_report"
            style="@style/button"
            android:layout_gravity="end"
            android:onClick="onClick"
            android:visibility="gone"
            android:text="@string/print" />
        
        <Button
            android:id="@+id/ib_submit"
            style="@style/button"
            android:layout_gravity="end"
            android:onClick="onClick"
            android:text="@string/submit" />

        <Button
            android:id="@+id/ib_clear"
            style="@style/button"
            android:layout_gravity="end"
            android:onClick="onClick"
            android:text="@string/clear" />
    </LinearLayout>
</LinearLayout>