<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_head_bar"
        style="@style/header_linear_layout"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="visible" >

        <ImageButton
            android:id="@+id/ib_back"
            style="@style/header_button_left"
            android:layout_marginEnd="10dip"
            android:background="@drawable/back" 
            android:onClick="onClick"/>
        
	    <LinearLayout
	        android:id="@+id/ll_title"
	        android:background="@color/transparent"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:visibility="visible" >
	        <TextView
	            android:id="@+id/tv_title"
	            android:textSize="@dimen/header_title_text_size"
	        	android:textColor="@color/title_text_color"
	        	android:gravity="center"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
	            android:text="@string/act_pd_title" />
	       <!--  <ImageButton
	            android:id="@+id/ib_drop"
	        	android:gravity="center"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
	            android:layout_marginStart="8dp"
	            android:background="@drawable/scan" /> -->
	    </LinearLayout>
        
        <ImageButton
            android:id="@+id/ib_options"
            style="@style/header_button_right"
            android:layout_marginLeft="8dip"
            android:background="@drawable/options"
            android:onClick="onOptionsClick" />
        
    </LinearLayout>


     <LinearLayout
         android:id="@+id/ll_list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center|center_horizontal|center_vertical"
         android:orientation="vertical"
         android:visibility="visible" >
        
         <LinearLayout
	         android:id="@+id/ll_top_bar"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:visibility="visible" >
             <ImageButton
                 android:id="@+id/ib_new"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:background="@drawable/add"
                 android:onClick="onClick"
                 android:visibility="gone" />
		     <Button
		         android:id="@+id/ib_add"
		         style="@style/button"
		         android:layout_width="0dp"
                 android:layout_weight="1"
		         android:layout_margin="5dp"
		         android:onClick="onClick"
		         android:text="@string/add_pd" />
        </LinearLayout>
         
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="1px"
             android:background="#33000000"/>
         
        <hylib.widget.HyListView
            android:id="@+id/lv_his"
            style ="@style/list_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"/>
     </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_detail"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
    
        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
		    android:textColor="@color/black" 
            android:visibility="gone"/>
	        
        <hylib.widget.HyListView
            android:id="@+id/lv_pd_detail"
            style ="@style/list_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"/>
	    
        <LinearLayout
            android:id="@+id/ll_detail_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_bg_color"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="visible" >
	
	        <TextView
	            android:id="@+id/tv_d_tmp"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_weight="1" />
        
            <Button
                android:id="@+id/ib_detail_reset"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/reset" />
            
            <Button
                android:id="@+id/ib_back2"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/back" />

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_inv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >

        <hylib.widget.HyListView
            android:id="@+id/lv_pd"
            style ="@style/list_view"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"/>

        <TextView
            android:id="@+id/tv_Stat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
	        android:gravity="center"
            android:background="@color/stat_bg_color"
            style="@style/stat_text" />
        
        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_bg_color"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="visible" >
	
            <Button
                android:id="@+id/ib_cancel"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/cancel" />
            
	        <TextView
	            android:id="@+id/tv_tmp"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_weight="1" />
        
            <Button
                android:id="@+id/ib_reset"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/reset" />
            
            <Button
                android:id="@+id/ib_submit"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/submit" />
            
            <Button
                android:id="@+id/ib_print"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/print" 
                android:visibility="gone"/>
            
            <Button
                android:id="@+id/ib_close"
                style="@style/button"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:text="@string/close" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>