<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00000000"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/tips_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dlg_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#00000000"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/dlg_edit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEEEEEE"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/dlg_text"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">"
                
                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="单价："
                    style="@style/dlg_text"/>
                
                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:maxLines="3"
                    android:minLines="3"
                    android:singleLine="true"
                    android:selectAllOnFocus="true"
                    android:textSize="@dimen/text_size" />
              </LinearLayout>
              
              <EditText
                  android:id="@+id/et_note"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/note"
                  android:inputType="textMultiLine"
                  android:maxLines="3"
                  android:minLines="3"
                  android:singleLine="true"
                  android:selectAllOnFocus="true"
                  android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_ok"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/ok"/>

                <Button
                    android:id="@+id/btn_exit"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>